--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run lint",
     "start": "electron .",
-    "debug": "env MODE=debug electron .",
+    "debug": "cross-env MODE=debug electron .",
     "build": "electron-builder build --publish never",
     "build-all": "electron-builder build -mwl",
     "lint": "standard --fix",
@@ -89,6 +89,7 @@
   },
   "homepage": "https://github.com/RangerMauve/agregore-browser#readme",
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "electron": "^9.1.0",
     "electron-builder": "^21",
     "electron-rebuild": "^1.11.0",
@@ -99,9 +100,10 @@
     "dat-fetch": "^5.0.0",
     "dat-sdk": "^2.1.0",
     "dat-sdk-old": "^1.0.0",
+    "dotenv": "^8.2.0",
     "electron-extensions": "^6.0.4",
     "fs-extra": "^9.0.1",
-    "ipfs": "^0.46.0",
+    "ipfs": "^0.46.1",
     "mime": "^2.4.6",
     "rc": "^1.2.8",
     "scoped-fs": "^1.4.1"
