--- a/package.json
+++ b/package.json
@@ -97,15 +97,25 @@
   },
   "dependencies": {
     "@geut/hyperdrive-promise": "^3.0.1",
+    "bootstrap": "^4.5.2",
     "dat-fetch": "^5.0.0",
     "dat-sdk": "^2.1.0",
     "dat-sdk-old": "^1.0.0",
     "dotenv": "^8.2.0",
     "electron-extensions": "^6.0.4",
+    "electron-reload": "^1.5.0",
+    "env": "0.0.2",
     "fs-extra": "^9.0.1",
     "ipfs": "^0.46.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.9.0",
+    "jwt-decode": "^2.2.0",
+    "keytar": "^6.0.1",
     "mime": "^2.4.6",
+    "ms": "^2.1.2",
+    "node-fetch": "^2.6.0",
     "rc": "^1.2.8",
+    "request": "^2.88.2",
     "scoped-fs": "^1.4.1"
   }
 }
