--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agregore-browser",
-  "version": "1.0.0-13",
+  "version": "2.0.0-0",
   "description": "A minimal web browser for the distributed web",
   "main": "app/main.js",
   "scripts": {
@@ -10,7 +10,9 @@
     "build": "electron-builder build --publish never",
     "build-all": "electron-builder build -mwl",
     "lint": "standard --fix",
-    "preversion": "npm run test"
+    "preversion": "npm run test",
+    "changelog:generate": "auto-changelog --template json --output changelog-data.json",
+    "version:new": "node scripts/version.js"
   },
   "build": {
     "npmRebuild": false,
@@ -97,13 +99,17 @@
   },
   "dependencies": {
     "@geut/hyperdrive-promise": "^3.0.1",
+    "auto-changelog": "^2.2.0",
+    "await-exec": "^0.1.2",
     "bootstrap": "^4.5.2",
     "dat-fetch": "^5.0.0",
     "dat-sdk": "^2.1.0",
     "dat-sdk-old": "^1.0.0",
     "dotenv": "^8.2.0",
+    "edit-package": "^1.0.3",
     "electron-extensions": "^6.0.4",
     "electron-reload": "^1.5.0",
+    "enquirer": "^2.3.6",
     "env": "0.0.2",
     "fs-extra": "^9.0.1",
     "ipfs": "^0.46.1",
@@ -117,5 +123,10 @@
     "rc": "^1.2.8",
     "request": "^2.88.2",
     "scoped-fs": "^1.4.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
