changed language from agregore to lagatos

--- a/app/extensions/lagatos-history/manifest.json
+++ b/app/extensions/lagatos-history/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 2,
-	"name": "agregore-history",
+	"name": "lagatos-history",
 	"version": "1.0",
 
 	"description": "The history tracking functionality for the Agregore Browser",
