--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agregore-browser",
+  "name": "lagatos-browser",
   "version": "2.0.0-0",
   "description": "A minimal web browser for the distributed web",
   "main": "app/main.js",
@@ -18,7 +18,7 @@
     "npmRebuild": false,
     "asar": true,
     "productName": "Lagatos Browser",
-    "appId": "agregore.mauve.moe",
+    "appId": "lagatos.browser.app",
     "files": [
       "build/**/*",
       "app/**/*",
@@ -73,7 +73,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RangerMauve/agregore-browser.git"
+    "url": "git+https://bitbucket.org/lagatoshq/browser-v2.git"
   },
   "keywords": [
     "dat",
@@ -87,9 +87,9 @@
   "author": "rangermauve <ranger@mauve.moe> (https://mauve.moe/)",
   "license": "AGPL-3.0",
   "bugs": {
-    "url": "https://github.com/RangerMauve/agregore-browser/issues"
+    "url": "https://bitbucket.org/lagatoshq/browser-v2/issues"
   },
-  "homepage": "https://github.com/RangerMauve/agregore-browser#readme",
+  "homepage": "https://bitbucket.org/lagatoshq/browser-v2#readme",
   "devDependencies": {
     "cross-env": "^7.0.2",
     "electron": "^9.1.0",
