--- a/app/extensions/lagatos-history/manifest.json
+++ b/app/extensions/lagatos-history/manifest.json
@@ -3,7 +3,7 @@
 	"name": "lagatos-history",
 	"version": "1.0",
 
-	"description": "The history tracking functionality for the Agregore Browser",
+	"description": "The history tracking functionality for the Lagatos Browser",
 
 	"background": {
 		"page": "background.html"
