--- a/package.json
+++ b/package.json
@@ -123,7 +123,9 @@
     "node-fetch": "^2.6.0",
     "rc": "^1.2.8",
     "request": "^2.88.2",
-    "scoped-fs": "^1.4.1"
+    "scoped-fs": "^1.4.1",
+    "to-json": "^0.5.0-prerelease",
+    "unsplash-js": "^6.0.0"
   },
   "config": {
     "commitizen": {
