fix ip address logging
add ip address without logging the user id

--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "mongodb": "^3.6.0",
     "ms": "^2.1.2",
     "node-fetch": "^2.6.0",
+    "public-ip": "^4.0.2",
     "rc": "^1.2.8",
     "request": "^2.88.2",
     "scoped-fs": "^1.4.1",
